# stage-programmation-dynamique

./: .gitignore  README.md  cmake.sh
TemporalBinPacking/: CMakeLists.txt
TemporalBinPacking/include/: TBPProblem.hpp  TBPdata.hpp
TemporalBinPacking/src/: TBPdata.cpp  TBPmain.cpp
